<?xml version="1.0"?>
<package format="2">
  <name>mobilearmbot_demos</name>
  <version>0.0.1</version>
  <description>The mobilearmbot_demos package</description>
  <maintainer email="kajananchinniah@gmail.com">kajanan</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
</package>
