<?xml version="1.0"?>
<package format="2">
  <name>mobilearmbot_teleop</name>
  <version>0.0.1</version>
  <description>The mobilearmbot_teleop package</description>
  <maintainer email="kajanan@todo.todo">kajanan</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>

</package>
